--- a/advex2/advex2/advex2.vcxproj.filters
+++ b/advex2/advex2/advex2.vcxproj.filters
@@ -29,7 +29,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\Mytest.cpp">
+    <ClCompile Include="..\..\Solver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
